        - HTTP response where returning duplicate media type 
          parameters. Reported by Evgeny Shepelyuk.
        - Added Status#isRecoverableError() method.
        - Added "retryOnError", "retryDelay" and "retryAttempts" 
          properties on ClientResource to try to recover from some
          communication errors.
        - ServerResource now rejects unknown entities with a 415 
          status. Suggested by Sylvain Pajaud. 
     - Enhancements
        - Upgraded Jetty library to version 6.1.18.
        - SpringServerServlet nows gets its component fully configured,
          with a default WAR client and parameters copied.
          Reported by Dustin N. Jenkins.
        - Added Variable.URI_QUERY_PARAM type to match query parameter
          names or values. Suggested by John Wismar.
        - ServerServlet nows copies the ServletContext into a special
          "org.restlet.ext.servlet.ServletContext" attribute of both
          the Component's context and the Application's context.
        - Added logging capabilities to the Router classes via a new
          protected log(Route) method.
        - Directory listings now correctly display a trailing slash for
          directories. Suggested by Aron Roberts.
        - Load only once the accept.properties file used by the 
          TunnelFilter instance.
        - Load only once the agent.properties file used to populate 
          ClientInfo instances.
        - SpringFinder and SpringBeanFinder now support the creation of 
          resources based on ServerResource.
        - SpringRouter and SpringBeanRouter now support the creation of 
          resources based on ServerResource.
        - Refactored content negotiation to take into account all 
          dimensions (language, media type, character set and encoding).
        - Improved metadata handling for local entities (files, zip,
          clap, etc.).  
        - Added Variant#includes() method.