@@ -54,7 +54,8 @@ import org.restlet.test.ext.xml.TransformerTestCase;
 import org.restlet.test.jaxrs.AllJaxRsTests;
 import org.restlet.test.representation.AppendableTestCase;
 import org.restlet.test.representation.DigestTestCase;
-import org.restlet.test.resource.AnnotatedResourceTestCase;
+import org.restlet.test.resource.AnnotatedResource1TestCase;
+import org.restlet.test.resource.AnnotatedResource2TestCase;
 import org.restlet.test.resource.DirectoryTestCase;
 import org.restlet.test.resource.FileRepresentationTestCase;
 import org.restlet.test.resource.ResourceTestCase;
@@ -84,7 +85,8 @@ public class RestletTestSuite extends TestSuite {
 
     /** Constructor. */
     public RestletTestSuite() {
-        addTestSuite(AnnotatedResourceTestCase.class);
+        addTestSuite(AnnotatedResource1TestCase.class);
+        addTestSuite(AnnotatedResource2TestCase.class);
         addTestSuite(AppendableTestCase.class);
         addTestSuite(AtomTestCase.class);
         addTestSuite(CallTestCase.class);
