@@ -1,0 +1,16 @@
+package org.restlet.test.resource;
+
+import org.restlet.data.MediaType;
+import org.restlet.representation.Representation;
+import org.restlet.representation.StringRepresentation;
+import org.restlet.resource.Get;
+import org.restlet.resource.ServerResource;
+
+public class TestServerResource extends ServerResource {
+
+    @Get
+    public Representation represent() {
+        return new StringRepresentation("<content/>", MediaType.TEXT_XML);
+    }
+
+}
