@@ -67,7 +67,9 @@ Changes log
           properties on ClientResource to try to recover from some
           communication errors.
         - ServerResource now rejects unknown entities with a 415 
-          status. Suggested by Sylvain Pajaud. 
+          status. Suggested by Sylvain Pajaud.
+        - Fixed bug with annotated methods returning a representation.
+          Metadata were always overridden. Reported by Joe Nellis.
      - Enhancements
         - Upgraded Jetty library to version 6.1.18.
         - SpringServerServlet nows gets its component fully configured,
